--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         
         <activity 
-            android:name="com.eebbk.systemuimodedemo.NormalActivity" />
+            android:name="com.eebbk.systemuimodedemo.GetCustomActivity" />
         
         <activity 
             android:name="com.eebbk.systemuimodedemo.LowProfileActivity" />
